******************************************
*  Social Networks Visualiser (SocNetV)  *
******************************************

ChangeLog:

Version 0.80 - January 30  2010  (PROJECTED)
Codename: "supersyntages.gr"
----------------------------
- New statistic: Triad Census.
- Read support for list formatted files.
- Read support for comma separated values (csv) formatted sociomatrix files
- Much improved Dot format support. 
- Faster network load times, thanks to control variables.
- Added keyboard shortcuts for Centralities
- Refactored Import network menu. The user must define what network format is the file at hand.
- Fixed bug #416965: Not displaying nodes when loading GraphViz files
- Fixed bug #396124: GBC different in Pajek cp. to SocNetV
- Fixed bug #415277: network files were not loaded on startup
- Fixed bug #379225 side note: GraphML format did not preserve node labels.
- Fixed bug #418023: rewiring parameter typo in Graph::createRandomNetSmallWorld.
- Fixed bug #420708 on GraphML output files, not transforming special XML characters, like &, to ampersand codes, like &amp;  
- Fixed bug #418550: Clear selection when clicking on empty canvas.
- Fixed bug #504037: Negative Group Closeness Centrality
- Edited .spec to enable proper Fedora package creation.
- Changed ProgressBar behaviour: bars appear only if nodes are more than 300 or edges more than 1000.
- New feature: the embedded text editor can be used to copy/paste directly network data
- Updated user manual.


Version 0.70 - June 30  2009
Codename: "Summertime"
----------------------------
- First web Crawler implementation. Use Shift+C to test it. Doesn't support frames yet...
- Multiple nodes can be selected with mouse. Press and hold left mouse button somewhere on the canvas, then move mouse to test it.
- Fixed bug #379204 which was crashing SocNetV when creating small worlds above 201 nodes
- Fixed bug #381096 crashing SocNetV in Edge Filtering when an edge was reciprocal.